examples/test/testpolicy13112.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13112
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key41: value9
      key16: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value17
          key12: value49
          key11: value0
      podSelector:
        matchLabels:
          key49: value38
